# edgeml-android

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  PUBLISHING.md  README.md  SECURITY.md  build.gradle.kts  contract-manifest.json  gradle.properties  knope.toml  octomil-runtime.properties  settings.gradle.kts  sonar-project.properties
.clusterfuzzlite/: Dockerfile  build.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-release.yml  ci.yml  clusterfuzzlite.yml  codeql.yml  contract-conformance.yml  notify-apps.yml  notify-server.yml  openapi-types-fresh.yml  publish.yml  release.yml  scorecard.yml  trivy.yml
Docs/: PERSONALIZATION.md  WEIGHT_EXTRACTION.md
build-config/: arm-compatibility.cmake
docs/: NATIVE_BRIDGE.md
docs/cleanup/: 2026-05-08-bloat-reduction.md
edgeml/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
edgeml/src/main/: AndroidManifest.xml
edgeml/src/test/resources/: secagg_test_vectors.json
gradle/: verification-metadata.xml
octomil/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
octomil/src/main/: AndroidManifest.xml
octomil/src/main/cpp/: CMakeLists.txt  native_runtime_jni.cpp
octomil/src/main/jniLibs/arm64-v8a/: .gitkeep
sample/: build.gradle.kts  proguard-rules.pro
sample/src/main/: AndroidManifest.xml
sample/src/main/res/drawable/: ic_launcher_foreground.xml
sample/src/main/res/layout/: activity_main.xml
samples/: README.md  build.gradle.kts
samples/src/main/: AndroidManifest.xml
scripts/: check_openapi_banner.sh
(+568 files in other folders)
